<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_borda"
        android:layout_height="wrap_content"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Text_Nome"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp" />

            <TextView
                android:id="@+id/txtSobrenome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sobrenome"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btdeletar"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/delete_new2"
            android:layout_marginEnd="10dp"
            android:contentDescription="Deletar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Idade: "
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
        />
        <TextView
            android:id="@+id/txtIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_Idade"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" anos"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Peso: "
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" kg"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Altura: "
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" cm"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IMC: "
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingBottom="10sp"
        >

        <ImageView
            android:id="@+id/btAtualizar"
            android:layout_width="26sp"
            android:layout_height="26sp"
            android:src="@drawable/edit"
            android:contentDescription="Atualizar"
            android:layout_marginRight="10sp"/>

    </LinearLayout>

</LinearLayout>